--- a/build.gradle
+++ b/build.gradle
@@ -10,5 +10,9 @@ repositories {
 }
 
 dependencies {
+    // ## Dependencies
+    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.5'
+
+    // test dependencies
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
