--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,21 @@
+plugins {
+    id 'io.franzbecker.gradle-lombok' version '1.11'
+    id 'java'
+}
+
 group 'com.httputil'
 version '1.0-SNAPSHOT'
-
-apply plugin: 'java'
-
-sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
 }
 
+
 dependencies {
     // ## Dependencies
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.5'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
+    compileOnly 'org.projectlombok:lombok:1.16.20'
 
     // test dependencies
     testCompile group: 'junit', name: 'junit', version: '4.12'
